# ice

./: .clang-format  .gitignore  CMakeLists.txt
include/ice/: config.hpp  error.hpp  result.hpp  version.hpp
res/: ice.cmake.in  ice.rc.in
src/ice/: error.cpp  version.cpp  version.cpp.in  version.hpp.in
